--- a/Enamel/src/enamel/CreationSetupView.fxml
+++ b/Enamel/src/enamel/CreationSetupView.fxml
@@ -42,7 +42,7 @@
             </VBox>
             <HBox alignment="TOP_CENTER" layoutY="339.0" prefHeight="65.0" prefWidth="400.0" spacing="75.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#mainMenuButton" prefHeight="42.0" prefWidth="135.0" text="Main Menu">
+                  <Button fx:id="mmButton" mnemonicParsing="false" onAction="#mainMenuButton" prefHeight="42.0" prefWidth="135.0" text="Main Menu">
                      <font>
                         <Font name="Arial Black" size="12.0" />
                      </font>
