--- a/Enamel/src/enamel/ScenarioCreationView.fxml
+++ b/Enamel/src/enamel/ScenarioCreationView.fxml
@@ -24,7 +24,7 @@
          <children>
             <HBox alignment="CENTER" layoutY="673.0" prefHeight="70.0" prefWidth="1024.0" spacing="75.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="673.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#mainMenuButton" prefHeight="42.0" prefWidth="135.0" text="Main Menu">
+                  <Button fx:id="mmButton" mnemonicParsing="false" onAction="#mainMenuButton" prefHeight="42.0" prefWidth="135.0" text="Main Menu">
                      <font>
                         <Font name="Arial Black" size="12.0" />
                      </font>
@@ -44,7 +44,7 @@
                         <Font name="Arial Black" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#finishScenarioButton" prefHeight="42.0" prefWidth="135.0" text="Finish Scenario (Save Scenario)" textAlignment="CENTER" wrapText="true">
+                  <Button fx:id="finishScenarioButton" mnemonicParsing="false" onAction="#finishScenarioButton" prefHeight="42.0" prefWidth="135.0" text="Finish Scenario (Save Scenario)" textAlignment="CENTER" wrapText="true">
                      <font>
                         <Font name="Arial Black" size="12.0" />
                      </font>
@@ -342,7 +342,7 @@
                         </TitledPane>
                         <HBox alignment="CENTER" prefHeight="64.0" prefWidth="283.0">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#previewScenario" prefHeight="54.0" prefWidth="283.0" text="Preview Teaching Scenario" />
+                              <Button fx:id="previewScenarioButton" mnemonicParsing="false" onAction="#previewScenario" prefHeight="54.0" prefWidth="283.0" text="Preview Teaching Scenario" />
                            </children>
                         </HBox>
                      </children>
